<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/cvStep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp">

        <ImageView
            android:id="@+id/ivStep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:padding="5dp">

            <TextView
                android:id="@+id/tvNumberStep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/step_number"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/white"
                android:textStyle="italic" />

            <ImageButton
                android:id="@+id/btRemoveStep"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="end"
                android:layout_margin="2dp"
                android:background="@null"
                android:src="@drawable/ic_clear_white_24dp" />

            <ImageButton
                android:id="@+id/btHighlight"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerVertical="true"
                android:layout_gravity="end"
                android:layout_marginTop="2dp"
                android:layout_marginRight="6dp"
                android:layout_marginLeft="2dp"
                android:layout_marginBottom="2dp"
                android:layout_toLeftOf="@+id/btRemoveStep"
                android:background="@null"
                android:src="@drawable/ic_brush_white_24dp" />
        </RelativeLayout>


    </android.support.v7.widget.CardView>

    <EditText
        android:id="@+id/etStep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cvStep"
        android:layout_alignRight="@+id/cvStep"
        android:layout_below="@+id/cvStep"
        android:layout_gravity="bottom"
        android:hint="@string/step_hint"
        android:padding="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>