<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/ti_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_hint"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvSteps"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/ti_title"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:scrollbars="vertical" />

    </RelativeLayout>
</ScrollView>

